--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
       run: echo Hello, world!
     - name: Run a multi-line script
       run: |
-        "hello" | echo
+        docker --version
         echo test, and deploy your project.
