--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,5 @@ jobs:
       run: |
         docker --version
         docker-compose --version
+        python --version
         echo test, and deploy your project.
