--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,6 @@ jobs:
       run: |
         docker --version
         docker-compose --version
-        python --version
+        python3 --version
+        npm --version
         echo test, and deploy your project.
